--- a/templates/category.html
+++ b/templates/category.html
@@ -14,7 +14,7 @@
             <p>Categories</p>
             <ul class = 'category_list' style="list-style-type:none">
             {% for c in categories %}
-            <li><a href = '#'>{{c.name}}</a></li>
+            <li><a href = "{{url_for('category', category_name = c.name)}}">{{c.name}}</a></li>
            
             {% endfor %}
             </ul>
@@ -25,7 +25,7 @@
             <p>{{category.name}} Items ({{items.count()}} items)</p>
             <ul class = 'category_items_list' style="list-style-type:none">
             {% for i in items %}
-            <li><a href = '#'>{{i.name}}</a>
+            <li><a href = "{{url_for('item', category_name = category.name, item_name=i.name)}}">{{i.name}}</a>
             
             
             </li>
