--- a/templates/item.html
+++ b/templates/item.html
@@ -12,7 +12,11 @@
         <div class = 'item'> 
             <h1>{{item.name}}</h1>
             <p>{{item.description}}</p>
-
+            <p>
+            <a href = "{{url_for('editItem', category_name = item.category.name, item_name=item.name)}}">Edit</a>
+            <text>|</text>
+            <a href = "{{url_for('deleteItem', category_name = item.category.name, item_name=item.name)}}">Delete</a>
+            </p>
         </div>
   
     </body>
