--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,36 +1,38 @@
 <html>
     <head>
-        <!---link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}"--->
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}" >
     </head>
 
     <body>
-        <div class = 'header'>
-            <div><p>Catalog App</p></div>
-            <div class = 'login'><p>Login</p></div>
-        </div>
- 
-        <div class = 'category'>
-            <p>Categories</p>
-            <ul class = 'category_list' style="list-style-type:none">
+        {% include "header.html" %}
+        <div class = 'container'>
+        <div class = 'nav'>
+            <h2>Categories</h2>
+            <ul class = 'list' style="list-style-type:none">
             {% for c in categories %}
             <li><a href = "{{url_for('category', category_name = c.name)}}">{{c.name}}</a></li>
            
             {% endfor %}
             </ul>
-            
+        
         </div>
         
-        <div class = 'lastest_items'> 
-            <a href = "{{url_for('addItem')}}">Add Item</a>
-            <p>Lastest Items</p>
-            <ul class = 'lastest_items_list' style="list-style-type:none">
+
+        <div class = 'right'> 
+            <div class = 'option'>
+                <a href = "{{url_for('addItem')}}">Add Item</a>
+            </div>
+            <div class = 'content'>
+            <h2>Latest Items</h2>
+            <ul class = 'list' style="list-style-type:none">
             {% for i in items %}
             <li><a href = "{{url_for('item', category_name = i.category.name, item_name=i.name)}}">{{i.name}}</a>
             <i>({{i.category.name}})</i>
             
             </li>
             {% endfor %}
-
+            </div>
+        </div>
         </div>
   
     </body>
