--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -1,26 +1,23 @@
 <html>
     <head>
-        <!---link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}"--->
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
     </head>
 
     <body>
-        <div class = 'header'>
-            <div><p>Catalog App</p></div>
-            <div class = 'login'><p>Login</p></div>
-        </div>
-    
+        {% include "header.html" %}
+    <div class = 'container'>
         <div class = 'item'> 
-            <h1>Edit Item</h1>      
+            <h2>Edit Item</h2>      
             
             <form action="{{url_for('editItem', category_name = item.category.name, item_name = item.name)}}" method = 'post'>
             
             <dl>
                 <dt>Title</dt>
-                    <dd><input type ='text' size='30' name='name' placeholder = '{{item.name }}'></dd>
-                <dt>Description:</dt>
-                    <dd><textarea name = 'description' rows='5' cols='40' placeholder = '{{item.description }}'></textarea></dd>
-                
-                <select name="category_id">
+                    <input class = 'form' type ='text' size='38' name='name' placeholder = '{{item.name }}'>
+                <dt>Description</dt>
+                    <textarea class = 'form'  name = 'description' rows='5' cols='40' placeholder = '{{item.description }}'></textarea>
+                <dt>Category</dt>
+                <select class = 'form'  name="category_id">
                     {% for c in categories %}
                     {% if c.name == item.category.name %}
                     <option value="{{c.id}}" selected>{{c.name}}</option>
@@ -29,12 +26,12 @@
                     {% endif %}
                     {% endfor %}
                 </select>    
+            </dl>
             
-            
-            <input type='submit', value = 'Submit'>
+            <input class = 'submit' type='submit', value = 'Submit'>
             
             </form>
         </div>
-  
+    </div>
     </body>
 </html>
