--- a/templates/addcategory.html
+++ b/templates/addcategory.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--html code for add item page-->
+<!--html code for add category page-->
 <html>
     <head>
         <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
@@ -10,19 +10,11 @@
         
         <!--content-->
         <div class="main">
-            <h2>Edit Item</h2>      
-            <form class="form" action="{{url_for('addItem')}}" method="post">
+            <h2>Edit Category</h2>      
+            <form class="form" action="{{url_for('addCategory')}}" method="post">
                 <dl>
                 <dt>Title</dt>
                     <input type="text" size="40" name="name" placeholder="Title">
-                <dt>Description</dt>
-                    <textarea name="description" rows="5" cols="40" placeholder="Description"></textarea>
-                <dt>Category</dt>
-                    <select name="category_id">
-                    {% for c in categories %}
-                    <option value="{{c.id}}">{{c.name}}</option>
-                    {% endfor %}
-                    </select>
                 <dt><input type="submit" value="Submit"></dt>                    
                 </dl>
             </form>
