--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,39 +1,41 @@
+<!DOCTYPE html>
+<!--html code for catalog page-->
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}" >
+        <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}" >
     </head>
-
     <body>
+        <!--header-->
         {% include "header.html" %}
-        <div class = 'container'>
-        <div class = 'nav'>
+        
+        <div class="main">
+        <!--nav-->
+        <div class="nav">
+            <div class="option">
+                <a href="{{url_for('addCategory')}}">Add Category</a>
+            </div>
             <h2>Categories</h2>
-            <ul class = 'list' style="list-style-type:none">
+            <ul style="list-style-type:none">
             {% for c in categories %}
-            <li><a href = "{{url_for('category', category_name = c.name)}}">{{c.name}}</a></li>
-           
+            <li><a href="{{url_for('category', category_name = c.name)}}">{{c.name}}</a></li>
             {% endfor %}
             </ul>
-        
         </div>
         
-
-        <div class = 'right'> 
-            <div class = 'option'>
-                <a href = "{{url_for('addItem')}}">Add Item</a>
+        <!--content-->
+        <div class="content"> 
+            <div class="option">
+                <a href="{{url_for('addItem')}}">Add Item</a>
             </div>
-            <div class = 'content'>
             <h2>Latest Items</h2>
-            <ul class = 'list' style="list-style-type:none">
+            <ul style="list-style-type:none">
             {% for i in items %}
-            <li><a href = "{{url_for('item', category_name = i.category.name, item_name=i.name)}}">{{i.name}}</a>
-            <i>({{i.category.name}})</i>
-            
+            <li>
+                <a href="{{url_for('item', category_name = i.category.name, item_name=i.name)}}">{{i.name}}</a>
+                <i>({{i.category.name}})</i>
             </li>
             {% endfor %}
-            </div>
         </div>
         </div>
-  
     </body>
 </html>
