--- a/templates/deletecategory.html
+++ b/templates/deletecategory.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--html code for delete item page-->
+<!--html code for delete category page-->
 <html>
     <head>
         <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
@@ -11,8 +11,8 @@
         <!--content-->   
         <div class="main">
             <h2>Delete Item</h2>
-            <p>Are you sure you want to delete <b>{{item.name}}</b>?</p>
-            <form class="form" action="{{url_for('deleteItem', category_name = category_name, item_name = item.name)}}" method="post">
+            <p>Are you sure you want to delete <b>{{category_name}}</b>?</p>
+            <form class="form" action="{{url_for('deleteCategory', category_name = category_name)}}" method="post">
             <dl><input type="submit" value="Submit"></dl>
             </form>
         </div>
