--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,14 @@
-<div class = 'header'>
-    <div class = 'top-title'><a class = 'title' href="{{url_for('cataglog')}}">Catalog App<h1></div>
-    <div class = 'login-button'>
+<!DOCTYPE html>
+<!--html code for header-->
+<header class="header">
+    <div class="title">
+        <a class="title-hyperlink" href="{{url_for('catalog')}}">Catalog App</a>
+    </div>
+    <div class="login">
         {%if 'username' not in session %}
-        <a class = 'login-a' href="{{url_for('showLogin')}}">Login</a>
+        <a class="login-hyperlink" href="{{url_for('showLogin')}}">Login</a>
         {% else %}
-        <a class = 'login-a' href="{{url_for('disconnect')}}">Logout</a>
+        <a class="login-hyperlink" href="{{url_for('disconnect')}}">Logout</a>
         {% endif %}
     </div>
-</div>
+</header>
