--- a/templates/publicitem.html
+++ b/templates/publicitem.html
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
+<!--html code for public item page-->
 <html>
     <head>
-        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
     </head>
-
     <body>
+        <!--header-->  
         {% include "header.html" %}
-    <div class = 'container'>
-        <div class = 'item'> 
+        
+        <!--content-->  
+        <div class="main">
             <h2>{{item.name}}</h2>
             <p>{{item.description}}</p>
         </div>
-    </div>
     </body>
 </html>
