--- a/templates/item.html
+++ b/templates/item.html
@@ -13,9 +13,9 @@
             <h2>{{item.name}}</h2>
             <p>{{item.description}}</p>
             <p>
-            <a class="inline-link" href="{{url_for('editItem', category_name = item.category.name, item_name=item.name)}}">Edit</a>
+            <a class="inline-link" href="{{url_for('editItem', category_id=item.category.id, item_id=item.id)}}">Edit</a>
             |
-            <a class="inline-link" href="{{url_for('deleteItem', category_name = item.category.name, item_name=item.name)}}">Delete</a>
+            <a class="inline-link" href="{{url_for('deleteItem', category_id=item.category.id, item_id=item.id)}}">Delete</a>
             </p>
         </div>
     </body>
