--- a/templates/deleteitem.html
+++ b/templates/deleteitem.html
@@ -12,7 +12,7 @@
         <div class="main">
             <h2>Delete Item</h2>
             <p>Are you sure you want to delete <b>{{item.name}}</b>?</p>
-            <form class="form" action="{{url_for('deleteItem', category_name = category_name, item_name = item.name)}}" method="post">
+            <form class="form" action="{{url_for('deleteItem', category_id=category_id, item_id=item.id)}}" method="post">
             <dl><input type="submit" value="Submit"></dl>
             </form>
         </div>
