--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -11,7 +11,7 @@
         <!--content-->         
         <div class="main">
             <h2>Edit Item</h2>
-            <form class="form" action="{{url_for('editItem', category_name = item.category.name, item_name = item.name)}}" method="post">
+            <form class="form" action="{{url_for('editItem', category_id=item.category.id, item_id=item.id)}}" method="post">
             <dl>
                 <dt>Title</dt>
                     <input type="text" size="40" name="name" placeholder="{{item.name}}">
