--- a/templates/publiccategory.html
+++ b/templates/publiccategory.html
@@ -14,7 +14,7 @@
             <h2>Categories</h2>
             <ul style="list-style-type:none">
             {% for c in categories %}
-            <li><a href="{{url_for('category', category_name = c.name)}}">{{c.name}}</a></li>
+            <li><a href="{{url_for('category', category_id=c.id)}}">{{c.name}}</a></li>
             {% endfor %}
             </ul>
         </div>
@@ -24,7 +24,7 @@
             <h2>{{category.name}} Items ({{items.count()}} items)</h2>
             <ul style="list-style-type:none">
             {% for i in items %}
-            <li><a href="{{url_for('item', category_name = category.name, item_name=i.name)}}">{{i.name}}</a>
+            <li><a href="{{url_for('item', category_id=category.id, item_id=i.id)}}">{{i.name}}</a>
             </li>
             {% endfor %}
         </div>
